<resources>
    <string name="app_name">mvpLoginAgenda</string>
    <string name="txtLogintitle">Login</string>
    <string name="txtLoginCorreo">Correo</string>
    <string name="txtLoginPassword">Contraseña</string>
    <string name="btnIngresar">Ingresar</string>
    <string name="btnRegistrar">Registrarse</string>

    /* Formulario de registro */
    <string name="txtAdminTittle">Banco wposs</string>
    <string name="txtNewtitle">Formulario de registro</string>
    <string name="txtNewCorreo">Correo</string>
    <string name="txtNewNombre">Nombre</string>
    <string name="txtNewPassword">Contraseña</string>
    <string name="btnNewRegistro">Registrarse</string>

    /*ADMIN BUTTONS */
    <string name="btnUpdateCop">Actualizar Corresponsal</string>
    <string name="btnUpdateClient">Actualizar Clientes</string>
    <string name="btnClosesessionAdmin">Cerrar Sesión</string>


    /* ADMIN CREAR CLIENTE*/
    <string name="txtAddAdmintitle">Crear cliente</string>
    <string name="txtAddAdminCliente">Nombre del cliente</string>
    <string name="txtAddAdminCC">Número de cedula</string>
    <string name="txtAdminSaldo">Saldo inicial</string>
    <string name="txtTitlePin">Ingrese su pin</string>
    <string name="txtTitleConfirmPin">Confirmar pin</string>
    <string name="btnAceptarPin">Aceptar</string>
    <string name="btnCancelPin">Cancelar</string>
    <string name="btnAceptarConfirmPin">Aceptar</string>
    <string name="btnCancelConfirmPin">Cancelar</string>

    <string name="txtAddAdminPin">PIN</string>


    <string name="txtAddAdminConfirmPin">Ingrese nuevamente su pin</string>
    <string name="txtAddAdminbtnConfirmar">Confirmar</string>
    <string name="txtAddAdminbtnCancelar">Cancelar</string>
    <string name="txtConfirmTitleData">Confirmar datos cliente</string>


    <string name="btnConfirmDataClient">Confirmar</string>
    <string name="btnCancelDataClient">Cancelar</string>
    <string name="btnAceptClient">Aceptar</string>


    /* ADMIN CREAR CORRESPONSAL*/
    <string name="txtAddAdmintitlecop">Registrar corresponsal</string>
    <string name="txtAddAdminnamecop">Nombre del corresponsal</string>
    <string name="txtAddAdminNitcop">NIT corresponsal</string>
    <string name="txtAddAdminEmailcop">Correo Corresponsal</string>
    <string name="txtAddAminPascop">Contraseña Corresponsal</string>

    /* ADMIN BUSCAR CORRESPONSAL /*
    <string name="txtSearcAdmintitlecop">Consultar corresponsal</string>
    <string name="txtSearcAdminNitcop">Número de NIT a consultar</string>
    <string name="btnSearchAdminConfimCop">Confirmar</string>
    <string name="btnSearchAdminCancelCop">Cancelar</string>

    /* ADMIN DATA CORRESPONSAL */

    <string name="btnDataHabilitarAdminCop">Habilitar</string>
    <string name="btnDataDeshabilitarAdminCop">Deshabilitar</string>
    /* ADMIN USER DATA
    <string name="txtSearcAdmintitleUser">Consultar cliente</string>
    <string name="txtSearcAdminCcUser">Número cédula a consultar</string>
    <string name="btnSearchAdminConfimUser">Confirmar</string>
    <string name="btnSearchAdminCancelUser">Cancelar</string>
    /* ADMIN LIST USERS */
    <string name="txtTitleListUsers">Listado clientes</string>
    <string name="SearchListCcClientes">Cédula cliente</string>

    /* CORRESPONSAL MENU*/

    <string name="menuUpdateDataCop">Atualizar datos</string>
    <string name="menuCreateClientCop">Crear cliente</string>
    <string name="menuCloseSessionCop">Cerrar sesión</string>


    /* CORRESPONSAL PAGO TARJETA */
    <string name="txtPayCardTitle">Pago con tarjeta</string>
    <string name="txtPayCardNumber">Número de tarjeta</string>
    <string name="txtPayCardYear">YYYY</string>
    <string name="txtPayCardMonth">mm</string>
    <string name="txtPayCardClientName">NOMBRE DEL CLIENTE</string>
    <string name="txtPayCardCuotes">Cuotas</string>
    <string name="txtPayCardValor">Valor a pagar</string>
    <string name="txtPayCardbtnConfirm">Confirmar</string>
    <string name="txtPayCardbtnCancel">Cancelar</string>
    <string name="txtConfirmPayTittle">Confirmación</string>
    <string name="txtConfirmPayName">Estimado :</string>
    <string name="txtConfirmPayValue">Desea realizar el pago a WPOSS por un valor de  :</string>
    <string name="txtConfirmPaycuotes">A #</string>
    <string name="txtConfirmPayNcard">Número de tarjeta</string>

    /* CORRESPONSAL RETIRO TARJETA*/
    <string name="txtRetCopTitle">Retiros</string>
    <string name="txtRetCopCc">Número de cédula</string>
    <string name="txtRetCopMonto">Monto a retirar</string>
    <string name="btnRetConfirm">Confirmar</string>
    <string name="btnRetCancel">Cancelar</string>
    <string name="txtRetConfirmPin">Confirmar pin</string>


    <string name="ConfirmRetTitle">Confirmación</string>
    <string name="ConfirmRetName">Estimado :</string>
    <string name="ConfirmRetNcuenta">Se realizará un retiro al número de cuenta</string>
    <string name="ConfirmRetValue">Por un valor de</string>


    /* CORRESPONSAL DEPOSITO */
    <string name="txtDepositCopTitle">Deposito</string>
    <string name="txtDepositCc">Número de cédula a depositar</string>
    <string name="txtDepositCopCc">Número de cédula que deposita</string>
    <string name="txtDepositMonto">Monto a depositar</string>
    <string name="btnDepositConfirm">Confirmar</string>
    <string name="btnDepositCancel">Cancelar</string>

    /*CONFIRMAR DEPOSITO */
    <string name="ConfirmDepoTittle">Confirmación</string>
    <string name="ConfirmDepoCc">Estimado :</string>
    <string name="ConfirmDepoCcTarjet">Desea realizar el deposito a</string>
    <string name="ConfirmDepoValue">Por un valor de :</string>
    <string name="btnConfirmDepo">Confirmar</string>
    <string name="btnCancelConfirmDepo">Cancelar</string>


    /* CORRESPONSAL TRANSFERENCIA */
    <string name="TransferTittle">Transferencia</string>
    <string name="txtTransferCc">Número de cédula a transferir</string>
    <string name="txtTransferCcclient">Número de cédula que transfiere</string>
    <string name="txtTransferValue">Monto a transferir</string>
    <string name="btnConfirmTransfer">Confirmar</string>
    <string name="btnCancelTransfer">Cancelar</string>


    /* CORRESPONSAL HISTORIAL */
    <string name="txtHistoryTitle">Historial de transacciones</string>
    <string name="txtHistorySearch">Dato de referencia</string>
    /* CORRESPONSAL SALDO */
    <string name="txtBalanceTitle">Consulta de saldo</string>
    <string name="txtBalanceCc">Numero de cédula a consultar</string>
    <string name="btnConfimBalance">Confirmar</string>
    <string name="btnCancelBalance">Cancelar</string>
    /* ACTUALIZAR DATOS CORRESPONSAL */
    <string name="txtUpdateCopTitle">Actualizar corresponsal</string>
    <string name="txtUpdateCopPass">Contraseña actual</string>
    <string name="txtUpdateCopNewPass">Contraseña nueva</string>
    <string name="txtUpdateCopConfirmPass">Confirmar contraseña</string>
    <string name="btnConfirmUpdateCop">Confirmar</string>
    <string name="btnCancelUpdateCop">Cancelar</string>
</resources>