<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register"
    android:orientation="vertical">
        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtAddAdmintitle"
            android:textAlignment="center"
            android:textSize="34sp" android:layout_marginBottom="20dp"/>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginBottom="20dp"
            app:endIconMode="clear_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtNewClienteAdmin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#B52A2A"
                android:hint="@string/txtAddAdminCliente"
                android:textAllCaps="true" />

        </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginBottom="20dp"
        app:endIconMode="clear_text"
        app:counterEnabled="true"
        app:counterMaxLength="12">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtNewAdminCC"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txtAddAdminCC"
            android:inputType="number"
            android:maxLength="12" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            app:startIconDrawable="@drawable/ic_dollar_icon"
            app:startIconTint="#E64C25"
        android:layout_marginBottom="20dp"
        app:endIconMode="clear_text"
            >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtNewAdminSaldo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txtAdminSaldo"
            android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp">

            <Button
                android:id="@+id/btnConfirmarNewCliente"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="44dp"
                android:backgroundTint="#E64C25"
                android:text="@string/txtAddAdminbtnConfirmar"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <Button
                android:id="@+id/btnCancelClient"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtAddAdminbtnCancelar"
                android:textColor="#E64C25"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.369"
                app:layout_constraintStart_toEndOf="@+id/btnConfirmarNewCliente"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>