<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:paddingTop="200dp">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtLogintitle"
        android:textAlignment="center"
        android:textColor="#0927E8"
        android:textSize="48sp"
        android:textStyle="bold"
        android:layout_marginBottom="30dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_marginHorizontal="30dp"
        app:endIconMode="clear_text"
        app:boxStrokeColor="#39F"
        app:hintTextColor="#39F"
        android:textColorHint="#39F">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtLoginEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txtLoginCorreo"
            android:text="admin@wposs.com"
            android:textSize="24sp"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_marginHorizontal="30dp"
        app:endIconMode="password_toggle"
        app:endIconTint="#39F"
        app:boxStrokeColor="#39F"
        app:hintTextColor="#39F"
        android:textColorHint="#39F"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtLoginPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txtLoginPassword"
            android:inputType="textPassword"
            android:text="Admin123*"
            android:textSize="24sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnLoginIngresar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#39F"
            android:text="@string/btnIngresar"
            android:textSize="34sp" />

    </LinearLayout>

</LinearLayout>