<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Corresponsal_Register_Client">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="115dp">

        <LinearLayout
            android:layout_width="164dp"
            android:layout_height="158dp"
            android:layout_marginStart="262dp"
            android:layout_marginBottom="4dp"
            android:background="@drawable/circulo"
            android:backgroundTint="#39F"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent">

        </LinearLayout>

        <ImageView
            android:id="@+id/imgArrowBackCop"
            android:layout_width="54dp"
            android:layout_height="54dp"
            android:layout_marginStart="290dp"
            android:layout_marginBottom="25dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_action_arrowback"
            app:tint="@color/white" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/txtAddAdmintitle"
        android:textAlignment="center"
        android:textColor="#070707"
        android:textSize="34sp"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginBottom="20dp"
        app:endIconMode="clear_text">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtNewClienteCop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#B52A2A"
            android:hint="@string/txtAddAdminCliente"
            android:text="Miguel"
            android:textAllCaps="true"
            android:textSize="24sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginBottom="20dp"
        app:endIconMode="clear_text"
        app:counterEnabled="true"
        app:counterMaxLength="12">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtNewCopCC"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txtAddAdminCC"
            android:inputType="number"
            android:maxLength="12"
            android:text="1232890544"
            android:textSize="24sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        app:startIconDrawable="@drawable/ic_dollar_icon"
        app:startIconTint="#39F"
        android:layout_marginBottom="20dp"
        app:endIconMode="clear_text"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtNewCopSaldo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txtAdminSaldo"
            android:inputType="number"
            android:text="10000"
            android:textSize="24sp" />
    </com.google.android.material.textfield.TextInputLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp">

        <Button
            android:id="@+id/btnConfirmarNewCliente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="44dp"
            android:backgroundTint="#39F"
            android:text="@string/txtAddAdminbtnConfirmar"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/btnCancelNewCliente"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtAddAdminbtnCancelar"
            android:textColor="#39F"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.369"
            app:layout_constraintStart_toEndOf="@+id/btnConfirmarNewCliente"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>